<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5e_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="me1jwr@todo.todo">me1jwr</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>  
  <depend>ur_robot_driver</depend>
  <depend>ur_bringup</depend>
  <depend>ur_controllers</depend>
  <depend>ur_description</depend>
  <depend>ur_moveit_config</depend>
  <depend>moveit_visual_tools</depend>
  <depend>rviz_visual_tools</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros</depend>
  <depend>std_msgs</depend>
  <depend>moveit_core</depend>
  <depend>tf2_ros</depend>
  <depend>pluginlib</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_common</depend>
  <depend>ur5e_interfaces</depend>
  


  
  <build_depend>eigen</build_depend>
  <build_depend>geometric_shapes</build_depend>
 

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>



  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
